compiler-core/main/__parse/parse/snapshots/gleam_core____parse__parse__tests__type_invalid_constructor.snap
---
source: compiler-core/src_refactored/__parse/parse/tests.rs
assertion_line: 1224
expression: "\ntype A {\n    A(String)\n    type\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

type A {
    A(String)
    type
}


----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:4:5
  │
4 │     type
  │     ^^^^ I was not expecting this

Found the keyword `type`, expected one of: 
- `}`
- a record constructor
