compiler-core/main/__parse/parse/snapshots/gleam_core____parse__parse__tests__type_invalid_type_name.snap
---
source: compiler-core/src_refactored/__parse/parse/tests.rs
assertion_line: 1273
expression: "\ntype A(a, type) {\n    A\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

type A(a, type) {
    A
}


----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:2:11
  │
2 │ type A(a, type) {
  │           ^^^^ I was not expecting this

Found the keyword `type`, expected one of: 
- `)`
- a name
