compiler-core/main/__parse/parse/snapshots/gleam_core____parse__parse__tests__unknown_attribute.snap
---
source: compiler-core/src_refactored/__parse/parse/tests.rs
assertion_line: 749
expression: "@go_faster()\npub fn main() { 1 }"
snapshot_kind: text
---
----- SOURCE CODE
@go_faster()
pub fn main() { 1 }

----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:1:1
  │
1 │ @go_faster()
  │ ^^^^^^^^^^ I don't recognise this attribute

Hint: Try `deprecated`, `external` or `target` instead.
