compiler-core/main/__parse/parse/snapshots/gleam_core____parse__parse__tests__unknown_target.snap
---
source: compiler-core/src_refactored/__parse/parse/tests.rs
assertion_line: 722
expression: "\n@target(abc)\npub fn one() {}"
snapshot_kind: text
---
----- SOURCE CODE

@target(abc)
pub fn one() {}

----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:2:9
  │
2 │ @target(abc)
  │         ^^^ I don't recognise this target

Try `erlang`, `javascript`.
