compiler-core/main/__parse/parse/snapshots/gleam_core____parse__parse__tests__wrong_type_of_comments_with_hash.snap
---
source: compiler-core/src_refactored/__parse/parse/tests.rs
assertion_line: 2014
expression: "\npub fn main() {\n  # a python-style comment\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main() {
  # a python-style comment
}


----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:3:5
  │
3 │   # a python-style comment
  │     ^ I was not expecting this

Found a name, expected one of: 
- `(`
Hint: Maybe you meant to create a comment?
Comments in Gleam start with `//`, not `#`
